err/django-backlinks.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/backlinks'...
Listing './lib/python3.5/site-packages/backlinks/fixtures'...
Listing './lib/python3.5/site-packages/backlinks/pingback'...
Compiling './lib/python3.5/site-packages/backlinks/pingback/client.py'...
***   File "./lib/python3.5/site-packages/backlinks/pingback/client.py", line 111
    except xmlrpclib.Fault, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/backlinks/pingback/server.py'...
***   File "./lib/python3.5/site-packages/backlinks/pingback/server.py", line 140
    except xmlrpclib.Fault, fault:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/backlinks/pingback/templatetags'...
Compiling './lib/python3.5/site-packages/backlinks/server.py'...
***   File "./lib/python3.5/site-packages/backlinks/server.py", line 126
    except urllib2.HTTPError, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/backlinks/templatetags'...
Listing './lib/python3.5/site-packages/backlinks/tests'...
Compiling './lib/python3.5/site-packages/backlinks/tests/server.py'...
***   File "./lib/python3.5/site-packages/backlinks/tests/server.py", line 85
    except Fault, f:
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/backlinks/tests/xmlrpc.py'...
***   File "./lib/python3.5/site-packages/backlinks/tests/xmlrpc.py", line 37
    print "body:", repr(file)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/backlinks/trackback'...
Compiling './lib/python3.5/site-packages/backlinks/trackback/client.py'...
***   File "./lib/python3.5/site-packages/backlinks/trackback/client.py", line 117
    except SAXParseException, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/backlinks/trackback/server.py'...
***   File "./lib/python3.5/site-packages/backlinks/trackback/server.py", line 101
    except BacklinkServerError, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/backlinks/trackback/templates'...
Listing './lib/python3.5/site-packages/backlinks/trackback/templates/backlinks'...
Listing './lib/python3.5/site-packages/backlinks/trackback/templates/backlinks/trackback'...
Listing './lib/python3.5/site-packages/backlinks/trackback/templatetags'...
Listing './lib/python3.5/site-packages/backlinks/utils'...
Compiling './lib/python3.5/site-packages/backlinks/utils/unicodifier.py'...
***   File "./lib/python3.5/site-packages/backlinks/utils/unicodifier.py", line 123
    (lambda(x): self._convert_mschar(x.group(1), quotes_to),
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_backlinks-0.1a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
